descreases font size fixes issue where z-index was off when showing more items in a day, slightly resized calendar views

--- a/ui/inspectors/calendar.reel/calendar-widget.reel/_calendar-widget.css
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/_calendar-widget.css
@@ -19,9 +19,7 @@
     border: 1px solid #16171A;
 }
 
-.CalendarWidget > header {
-    margin-bottom: 1em;
-}
+.CalendarWidget > header { margin-bottom: 1em; }
 
 .CalendarWidget caption {
     padding: 1em 0;
@@ -127,7 +125,7 @@
 }
 
 .CalendarWidget-day {
-    height: 5.5em;
+    height: 5em;
 
     @media (min-height: 70em) {
         height: 8em;
@@ -212,7 +210,7 @@ Main Content
     }
 
     /* magic numbers :( */
-    height: 30em;
+    height: 22.5em;
 
     @media (min-height: 70em) {
         height: 40em;
@@ -311,7 +309,6 @@ Calendar Events
 
 .CalendarWidget-event {
     width: 100%;
-    font-size: 1rem;
     display: none;
     position: absolute;
     align-items: center;
@@ -344,6 +341,8 @@ Calendar Events
 .CalendarWidget-event-inner {
     overflow: hidden;
     border-radius: 2px;
+    font-size: .75rem;
+    padding: 0 .1rem;
     color: #fff;
 }
 
